[package]
name = "gofish"
version = "0.1.0"
authors = ["JasterV <jaster.victor@gmail.com>"]
edition = "2018"

[dependencies]
teloxide = { version="0.5.1", features = ["macros", "auto-send"] }
dotenv = "0.15.0"
log = "0.4.8"
thiserror = "1.0.x"
anyhow = "1.0.x"
pretty_env_logger = "0.4.0"
tokio = { version =  "1.3.0", features = ["rt-multi-thread", "macros"] }
mobc-redis = "0.7.0"
mobc = "0.7.3"