[package]
name = "gofish"
version = "0.1.0"
authors = ["JasterV <jaster.victor@gmail.com>"]
edition = "2018"

[dependencies]
teloxide = { version="0.5.1", features = ["macros", "auto-send"] }
dotenv = "0.15.0"
log = "0.4.8"
thiserror = "1.0.x"
anyhow = "1.0.x"
pretty_env_logger = "0.4.0"
tokio = { version =  "1.16.1", features = ["rt-multi-thread", "macros"] }
serde = "1.0.x"
rand = "0.8.4"
async-trait = "0.1.51"
lazy_static = "1.4.0"
dashmap = "4.0.2"
url = "2.2.2"
tokio-stream = "0.1.4"
# Used to setup a webhook
warp = "0.3.0"
reqwest = "0.11.4"
serde_json = "1.0.50"